# ithillel_cpp

./: .gitignore  README.md
first_lection/: CMakeLists.txt  readme.txt
first_lection/src/: main.cpp
home_work10/: readme.txt
home_work10/SensorRecognition/: SensorRecognition.pro  analyser.cpp  analyser.h  config.cpp  config.h  logger.h  main.cpp  sensor.cpp  sensormetric.cpp  sensormetric.h
home_work11/: readme.txt
home_work11/SensorRecognition/: SensorRecognition.pro  analyser.cpp  analyser.h  config.cpp  config.h  gui.cpp  gui.h  logger.cpp  main.cpp  sensor.h  sensorgui.cpp  sensorgui.h  settings.h  simulator.cpp  simulator.h
home_work12/: readme.txt
home_work12/calculator/: logger.h
home_work13/gate_controller/: CMakeLists.txt
home_work13/gate_controller/lib/: CMakeLists.txt  gate.cpp  gate.h
home_work13/gate_controller/src/: main.cpp
home_work2/: CMakeLists.txt  readme.txt
home_work2/src/: main.cpp
home_work3/: readme.txt
home_work3/src/: main.cpp
home_work4/: CMakeLists.txt  readme.txt
home_work4/src/: main.cpp
home_work5/: CMakeLists.txt  readme.txt
home_work5/src/: main.cpp
home_work6/: CMakeLists.txt  readme.txt
home_work6/src/: main.cpp
home_work7/: CMakeLists.txt  readme.txt
home_work7/src/: main.cpp
home_work8/: CMakeLists.txt  readme.txt
home_work8/src/: main.cpp
home_work9/: readme.txt
home_work9/SensorRecognition/: SensorRecognition.pro  analyzer.cpp  analyzer.h  config.cpp  config.h  logger.cpp  logger.h  main.cpp
second_lection/: CMakeLists.txt
second_lection/src/: main.cpp
(+13 files in other folders)
